# metapilot

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md
services/api/: .env.example  Dockerfile  Makefile  Procfile  build.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
services/api/analytics/: models.py  views.py
services/api/analytics/migrations/: 0001_initial.py
services/api/api/: apps.py  permissions.py  urls.py
services/api/api/views/: __init__.py  agencies.py  (+10 more)
services/api/billing/: models.py
services/api/campaigns/: admin.py  models.py  serializers.py
services/api/chatbot/: api_views.py  content.json  service.py  tests.py  urls.py  views.py
services/api/core/: __init__.py  asgi.py  celery.py  settings.py  urls.py
services/api/inbox/: INBOX_MODULE.md  admin.py  apps.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py  webhook_listener.py  websocket.py
services/api/messaging/: admin.py  models.py  serializers.py  tasks.py  universal_send.py  views.py  whatsapp_service.py
services/api/notifications/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
services/api/scheduler/: __init__.py  admin.py  apps.py  models.py  serializers.py  tasks.py  views.py
services/api/templates/: __init__.py  admin.py  apps.py  classifier.py  creation_service.py  meta_service.py  models.py  serializers.py  sync_service.py  tasks.py  upload_service.py  views.py
services/api/tenants/: admin.py  apps.py  models.py  serializers.py
services/api/users/: admin.py  apps.py  models.py  serializers.py
services/api/wa_chatbot/: __init__.py  api_views.py  apps.py  models.py  serializers.py  urls.py  views.py  webhook_views.py
services/api/webhooks/: security.py  views.py
(+97 files in other folders)
